--- a/calculators/roth-vs-traditional.html
+++ b/calculators/roth-vs-traditional.html
@@ -68,14 +68,14 @@
 </head>
 <body>
     <!-- Skip to content for accessibility -->
-    <a href="#main-content" class="skip-link" data-i18n="accessibility.skipToContent">Skip to main content</a>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.rothVsTraditional.title">Roth vs Traditional Calculator</h1>
+        <h1 class="calc-title">Roth vs Traditional Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -92,23 +92,23 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h18M3 12h18M3 18h18"></path></svg>
-                    <span data-i18n="calculators.rothVsTraditional.compareOptions">Compare Your Options</span>
+                    <span>Compare Your Options</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="rothTraditionalForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentAge" data-i18n="calculators.rothVsTraditional.currentAge">Current Age</label>
+                            <label for="currentAge">Current Age</label>
                             <input type="number" id="currentAge" min="18" max="70" value="35" required>
                         </div>
                         <div class="form-group">
-                            <label for="retirementAge" data-i18n="calculators.rothVsTraditional.retirementAge">Retirement Age</label>
+                            <label for="retirementAge">Retirement Age</label>
                             <input type="number" id="retirementAge" min="55" max="80" value="65" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="annualContribution" data-i18n="calculators.rothVsTraditional.annualContributionLabel">Annual Contribution</label>
+                        <label for="annualContribution">Annual Contribution</label>
                         <div class="input-group">
                             <span>$</span>
                             <input type="number" id="annualContribution" min="0" max="30500" value="7000" required>
@@ -116,14 +116,14 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentTaxRate" data-i18n="calculators.rothVsTraditional.currentTaxRateLabel">Current Tax Rate</label>
+                            <label for="currentTaxRate">Current Tax Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="currentTaxRate" min="0" max="50" step="0.1" value="24" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="retirementTaxRate" data-i18n="calculators.rothVsTraditional.retirementTaxRateLabel">Retirement Tax Rate</label>
+                            <label for="retirementTaxRate">Retirement Tax Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="retirementTaxRate" min="0" max="50" step="0.1" value="22" required>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="expectedReturn" data-i18n="calculators.rothVsTraditional.expectedReturnLabel">Expected Annual Return</label>
+                        <label for="expectedReturn">Expected Annual Return</label>
                         <div class="input-group">
                             <span>%</span>
                             <input type="number" id="expectedReturn" min="0" max="15" step="0.1" value="7" required>
@@ -139,30 +139,30 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentTraditional" data-i18n="calculators.rothVsTraditional.currentTraditionalBalance">Current Traditional</label>
+                            <label for="currentTraditional">Current Traditional</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentTraditional" min="0" value="50000">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="currentRoth" data-i18n="calculators.rothVsTraditional.currentRothBalance">Current Roth</label>
+                            <label for="currentRoth">Current Roth</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentRoth" min="0" value="25000">
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn" data-i18n="calculators.rothVsTraditional.compareAccounts">Compare Accounts</button>
+                    <button type="submit" class="btn">Compare Accounts</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="401k.html" class="calc-quick-link">💼 <span data-i18n="calculators.401k.title">401(k)</span></a>
-                <a href="retirement.html" class="calc-quick-link">🎯 <span data-i18n="calculators.retirement.title">Retirement</span></a>
-                <a href="compound-interest.html" class="calc-quick-link">📈 <span data-i18n="calculators.compoundInterest.title">Compound Interest</span></a>
-                <a href="investment-return.html" class="calc-quick-link">💹 <span data-i18n="calculators.investmentReturn.title">Investment Return</span></a>
+                <a href="401k.html" class="calc-quick-link">💼 <span>401(k)</span></a>
+                <a href="retirement.html" class="calc-quick-link">🎯 <span>Retirement</span></a>
+                <a href="compound-interest.html" class="calc-quick-link">📈 <span>Compound Interest</span></a>
+                <a href="investment-return.html" class="calc-quick-link">💹 <span>Investment Return</span></a>
             </div>
         </div>
 
@@ -170,25 +170,25 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="difference">$0</div>
-                <div class="label" data-i18n="calculators.rothVsTraditional.difference">Difference in After-Tax Value</div>
+                <div class="label">Difference in After-Tax Value</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="traditionalAfterTax">$0</div>
-                    <div class="label" data-i18n="calculators.rothVsTraditional.traditionalAfterTaxValue">Traditional After-Tax</div>
+                    <div class="label">Traditional After-Tax</div>
                 </div>
                 <div class="calc-result-item success">
                     <div class="value" id="rothAfterTax">$0</div>
-                    <div class="label" data-i18n="calculators.rothVsTraditional.rothAfterTaxValue">Roth After-Tax</div>
+                    <div class="label">Roth After-Tax</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="traditionalMonthly">$0</div>
-                    <div class="label" data-i18n="calculators.rothVsTraditional.traditionalMonthlyIncome">Traditional Monthly</div>
+                    <div class="label">Traditional Monthly</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="rothMonthly">$0</div>
-                    <div class="label" data-i18n="calculators.rothVsTraditional.rothMonthlyIncome">Roth Monthly</div>
+                    <div class="label">Roth Monthly</div>
                 </div>
             </div>
 
@@ -197,8 +197,8 @@
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="details" data-i18n="calculators.rothVsTraditional.detailsTab">Details</button>
-                <button class="calc-output-tab" data-tab="comparison" data-i18n="calculators.rothVsTraditional.comparisonTab">Comparison</button>
+                <button class="calc-output-tab active" data-tab="details">Details</button>
+                <button class="calc-output-tab" data-tab="comparison">Comparison</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -206,15 +206,15 @@
                 <div class="calc-tab-content active" id="detailsContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.rothVsTraditional.traditionalBalanceAtRetirement">Traditional Balance</span>
+                            <span class="breakdown-label">Traditional Balance</span>
                             <span class="breakdown-value" id="traditionalBalance">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.rothVsTraditional.rothBalanceAtRetirement">Roth Balance</span>
+                            <span class="breakdown-label">Roth Balance</span>
                             <span class="breakdown-value" id="rothBalance">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.rothVsTraditional.breakEvenTaxRate">Break-Even Tax Rate</span>
+                            <span class="breakdown-label">Break-Even Tax Rate</span>
                             <span class="breakdown-value" id="breakEvenRate">0%</span>
                         </div>
                     </div>
@@ -225,9 +225,9 @@
                     <table class="calc-table">
                         <thead>
                             <tr>
-                                <th data-i18n="calculators.rothVsTraditional.factor">Factor</th>
-                                <th data-i18n="calculators.rothVsTraditional.traditional">Traditional</th>
-                                <th data-i18n="calculators.rothVsTraditional.roth">Roth</th>
+                                <th>Factor</th>
+                                <th>Traditional</th>
+                                <th>Roth</th>
                             </tr>
                         </thead>
                         <tbody id="comparisonBody">
@@ -241,7 +241,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.rothVsTraditional.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -351,11 +351,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">&copy; 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="calculators.rothVsTraditional.footerDisclaimer">For educational purposes only. Consult a tax professional for personalized advice.</p>
+            <p>&copy; 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">For educational purposes only. Consult a tax professional for personalized advice.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -363,7 +363,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Roth vs Traditional Calculator -->
