--- a/calculators/auto-loan.html
+++ b/calculators/auto-loan.html
@@ -84,9 +84,9 @@
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.autoLoan.title">Auto Loan Calculator</h1>
+        <h1 class="calc-title">Auto Loan Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -103,21 +103,21 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"></path><circle cx="7" cy="17" r="2"></circle><circle cx="17" cy="17" r="2"></circle></svg>
-                    <span data-i18n="calculators.autoLoan.vehicleDetails">Vehicle Details</span>
+                    <span>Vehicle Details</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="autoLoanForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="vehiclePrice" data-i18n="calculators.autoLoan.vehiclePrice">Vehicle Price</label>
+                            <label for="vehiclePrice">Vehicle Price</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="vehiclePrice" value="35000" min="0" step="500" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="downPayment" data-i18n="calculators.autoLoan.downPayment">Down Payment</label>
+                            <label for="downPayment">Down Payment</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="downPayment" value="5000" min="0" step="500" required>
@@ -126,14 +126,14 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="tradeInValue" data-i18n="calculators.autoLoan.tradeInValue">Trade-In Value</label>
+                            <label for="tradeInValue">Trade-In Value</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="tradeInValue" value="0" min="0" step="500">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="salesTax" data-i18n="calculators.autoLoan.salesTaxRate">Sales Tax Rate</label>
+                            <label for="salesTax">Sales Tax Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="salesTax" value="7" min="0" max="15" step="0.1">
@@ -142,33 +142,33 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="interestRate" data-i18n="calculators.autoLoan.interestRate">Interest Rate (APR)</label>
+                            <label for="interestRate">Interest Rate (APR)</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="interestRate" value="6.5" min="0" max="30" step="0.1" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="loanTerm" data-i18n="calculators.autoLoan.loanTerm">Loan Term</label>
+                            <label for="loanTerm">Loan Term</label>
                             <select id="loanTerm">
-                                <option value="36" data-i18n="calculators.autoLoan.months36">36 months (3 years)</option>
-                                <option value="48" data-i18n="calculators.autoLoan.months48">48 months (4 years)</option>
-                                <option value="60" selected data-i18n="calculators.autoLoan.months60">60 months (5 years)</option>
-                                <option value="72" data-i18n="calculators.autoLoan.months72">72 months (6 years)</option>
-                                <option value="84" data-i18n="calculators.autoLoan.months84">84 months (7 years)</option>
+                                <option value="36">36 months (3 years)</option>
+                                <option value="48">48 months (4 years)</option>
+                                <option value="60" selected>60 months (5 years)</option>
+                                <option value="72">72 months (6 years)</option>
+                                <option value="84">84 months (7 years)</option>
                             </select>
                         </div>
                     </div>
-                    <button type="submit" class="btn" data-i18n="calculators.autoLoan.calculate">Calculate Payment</button>
+                    <button type="submit" class="btn">Calculate Payment</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="loan-payoff.html" class="calc-quick-link">💳 <span data-i18n="calculators.loanPayoff.title">Loan Payoff</span></a>
-                <a href="debt-payoff.html" class="calc-quick-link">📊 <span data-i18n="calculators.debtPayoff.title">Debt Payoff</span></a>
-                <a href="mortgage.html" class="calc-quick-link">🏠 <span data-i18n="calculators.mortgage.title">Mortgage</span></a>
-                <a href="refinance.html" class="calc-quick-link">🔄 <span data-i18n="calculators.refinance.title">Refinance</span></a>
+                <a href="loan-payoff.html" class="calc-quick-link">💳 <span>Loan Payoff</span></a>
+                <a href="debt-payoff.html" class="calc-quick-link">📊 <span>Debt Payoff</span></a>
+                <a href="mortgage.html" class="calc-quick-link">🏠 <span>Mortgage</span></a>
+                <a href="refinance.html" class="calc-quick-link">🔄 <span>Refinance</span></a>
             </div>
         </div>
 
@@ -176,32 +176,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlyPayment">$0</div>
-                <div class="label" data-i18n="calculators.autoLoan.monthlyPayment">Monthly Payment</div>
+                <div class="label">Monthly Payment</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="loanAmount">$0</div>
-                    <div class="label" data-i18n="calculators.autoLoan.loanAmount">Loan Amount</div>
+                    <div class="label">Loan Amount</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="totalInterest">$0</div>
-                    <div class="label" data-i18n="calculators.autoLoan.totalInterest">Total Interest</div>
+                    <div class="label">Total Interest</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="totalCost">$0</div>
-                    <div class="label" data-i18n="calculators.autoLoan.totalCost">Total Cost</div>
+                    <div class="label">Total Cost</div>
                 </div>
                 <div class="calc-result-item success">
                     <div class="value" id="taxAmount">$0</div>
-                    <div class="label" data-i18n="calculators.autoLoan.salesTax">Sales Tax</div>
+                    <div class="label">Sales Tax</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="breakdown" data-i18n="calculators.autoLoan.breakdown">Breakdown</button>
-                <button class="calc-output-tab" data-tab="comparison" data-i18n="calculators.autoLoan.comparison">Term Comparison</button>
+                <button class="calc-output-tab active" data-tab="breakdown">Breakdown</button>
+                <button class="calc-output-tab" data-tab="comparison">Term Comparison</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -209,31 +209,31 @@
                 <div class="calc-tab-content active" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.vehiclePrice">Vehicle Price</span>
+                            <span class="breakdown-label">Vehicle Price</span>
                             <span class="breakdown-value" id="breakdownVehiclePrice">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.salesTax">Sales Tax</span>
+                            <span class="breakdown-label">Sales Tax</span>
                             <span class="breakdown-value" id="breakdownTax">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.downPayment">Down Payment</span>
+                            <span class="breakdown-label">Down Payment</span>
                             <span class="breakdown-value" id="breakdownDownPayment">-$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.tradeInValue">Trade-In Value</span>
+                            <span class="breakdown-label">Trade-In Value</span>
                             <span class="breakdown-value" id="breakdownTradeIn">-$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.loanAmount">Loan Amount</span>
+                            <span class="breakdown-label">Loan Amount</span>
                             <span class="breakdown-value" id="breakdownLoanAmount">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.totalInterest">Total Interest</span>
+                            <span class="breakdown-label">Total Interest</span>
                             <span class="breakdown-value" id="breakdownInterest">$0</span>
                         </div>
                         <div class="breakdown-item total">
-                            <span class="breakdown-label" data-i18n="calculators.autoLoan.totalCost">Total Cost</span>
+                            <span class="breakdown-label">Total Cost</span>
                             <span class="breakdown-value" id="breakdownTotal">$0</span>
                         </div>
                     </div>
@@ -244,10 +244,10 @@
                     <table class="calc-table" id="comparisonTable">
                         <thead>
                             <tr>
-                                <th data-i18n="calculators.autoLoan.term">Term</th>
-                                <th data-i18n="calculators.autoLoan.monthlyPayment">Monthly</th>
-                                <th data-i18n="calculators.autoLoan.totalInterest">Interest</th>
-                                <th data-i18n="calculators.autoLoan.totalCost">Total</th>
+                                <th>Term</th>
+                                <th>Monthly</th>
+                                <th>Interest</th>
+                                <th>Total</th>
                             </tr>
                         </thead>
                         <tbody id="comparisonBody">
@@ -261,7 +261,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.autoLoan.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -378,11 +378,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="footer.disclaimer">Disclaimer: This calculator provides estimates only. Actual payments may vary based on fees, taxes, and lender terms.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator provides estimates only. Actual payments may vary based on fees, taxes, and lender terms.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -390,7 +390,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Auto Loan Calculator -->
