--- a/calculators/compound-interest.html
+++ b/calculators/compound-interest.html
@@ -44,14 +44,14 @@
 </head>
 <body>
     <!-- Skip to content for accessibility -->
-    <a href="#main-content" class="skip-link" data-i18n="accessibility.skipToContent">Skip to main content</a>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.compoundInterest.title">Compound Interest Calculator</h1>
+        <h1 class="calc-title">Compound Interest Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -68,21 +68,21 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
-                    <span data-i18n="calculators.compoundInterest.investmentDetails">Investment Details</span>
+                    <span>Investment Details</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="compoundForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="principal" data-i18n="calculators.compoundInterest.initialInvestment">Initial Investment</label>
+                            <label for="principal">Initial Investment</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="principal" value="10000" min="0" step="100" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="monthlyContribution" data-i18n="calculators.compoundInterest.monthlyContribution">Monthly Contribution</label>
+                            <label for="monthlyContribution">Monthly Contribution</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="monthlyContribution" value="500" min="0" step="50" required>
@@ -91,36 +91,36 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="interestRate" data-i18n="calculators.compoundInterest.annualRate">Annual Interest Rate</label>
+                            <label for="interestRate">Annual Interest Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="interestRate" value="7" min="0" max="50" step="0.1" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="years" data-i18n="calculators.compoundInterest.years">Investment Period (Years)</label>
+                            <label for="years">Investment Period (Years)</label>
                             <input type="number" id="years" value="20" min="1" max="50" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="compoundFrequency" data-i18n="calculators.compoundInterest.compoundFrequency">Compound Frequency</label>
+                        <label for="compoundFrequency">Compound Frequency</label>
                         <select id="compoundFrequency">
-                            <option value="365" data-i18n="calculators.compoundInterest.daily">Daily</option>
-                            <option value="12" selected data-i18n="calculators.compoundInterest.monthly">Monthly</option>
-                            <option value="4" data-i18n="calculators.compoundInterest.quarterly">Quarterly</option>
-                            <option value="1" data-i18n="calculators.compoundInterest.annually">Annually</option>
+                            <option value="365">Daily</option>
+                            <option value="12" selected>Monthly</option>
+                            <option value="4">Quarterly</option>
+                            <option value="1">Annually</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn" data-i18n="calculators.compoundInterest.calculate">Calculate Growth</button>
+                    <button type="submit" class="btn">Calculate Growth</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="investment-return.html" class="calc-quick-link">💹 <span data-i18n="calculators.investmentReturn.title">Investment Return</span></a>
-                <a href="savings-goal.html" class="calc-quick-link">🎯 <span data-i18n="calculators.savingsGoal.title">Savings Goal</span></a>
-                <a href="401k.html" class="calc-quick-link">💼 <span data-i18n="calculators.401k.title">401(k)</span></a>
-                <a href="retirement.html" class="calc-quick-link">🏖️ <span data-i18n="calculators.retirement.title">Retirement</span></a>
+                <a href="investment-return.html" class="calc-quick-link">💹 <span>Investment Return</span></a>
+                <a href="savings-goal.html" class="calc-quick-link">🎯 <span>Savings Goal</span></a>
+                <a href="401k.html" class="calc-quick-link">💼 <span>401(k)</span></a>
+                <a href="retirement.html" class="calc-quick-link">🏖️ <span>Retirement</span></a>
             </div>
         </div>
 
@@ -128,32 +128,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="futureValue">$0</div>
-                <div class="label" data-i18n="calculators.compoundInterest.futureValue">Future Value</div>
+                <div class="label">Future Value</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="initialDisplay">$0</div>
-                    <div class="label" data-i18n="calculators.compoundInterest.initialInvestment">Initial Investment</div>
+                    <div class="label">Initial Investment</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="totalContributions">$0</div>
-                    <div class="label" data-i18n="calculators.compoundInterest.totalContributions">Total Contributions</div>
+                    <div class="label">Total Contributions</div>
                 </div>
                 <div class="calc-result-item success">
                     <div class="value" id="totalInterest">$0</div>
-                    <div class="label" data-i18n="calculators.compoundInterest.interestEarned">Interest Earned</div>
+                    <div class="label">Interest Earned</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="effectiveRate">0%</div>
-                    <div class="label" data-i18n="calculators.compoundInterest.effectiveRate">Effective Rate (APY)</div>
+                    <div class="label">Effective Rate (APY)</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="growth" data-i18n="calculators.compoundInterest.growthTab">Growth Table</button>
-                <button class="calc-output-tab" data-tab="breakdown" data-i18n="calculators.compoundInterest.breakdownTab">Breakdown</button>
+                <button class="calc-output-tab active" data-tab="growth">Growth Table</button>
+                <button class="calc-output-tab" data-tab="breakdown">Breakdown</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -162,10 +162,10 @@
                     <table class="calc-table">
                         <thead>
                             <tr>
-                                <th data-i18n="calculators.compoundInterest.year">Year</th>
-                                <th data-i18n="calculators.compoundInterest.contributions">Contributions</th>
-                                <th data-i18n="calculators.compoundInterest.interest">Interest</th>
-                                <th data-i18n="calculators.compoundInterest.balance">Balance</th>
+                                <th>Year</th>
+                                <th>Contributions</th>
+                                <th>Interest</th>
+                                <th>Balance</th>
                             </tr>
                         </thead>
                         <tbody id="growthBody">
@@ -177,11 +177,11 @@
                 <div class="calc-tab-content" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.compoundInterest.ruleOf72">Rule of 72 (Years to Double)</span>
+                            <span class="breakdown-label">Rule of 72 (Years to Double)</span>
                             <span class="breakdown-value" id="ruleOf72">~10 years</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.compoundInterest.interestPercentage">Interest as % of Total</span>
+                            <span class="breakdown-label">Interest as % of Total</span>
                             <span class="breakdown-value" id="interestPercentage">0%</span>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.compoundInterest.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -280,11 +280,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
             <p class="disclaimer">Disclaimer: This calculator provides estimates based on constant interest rates. Actual investment returns will vary.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -292,7 +292,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Compound Interest Calculator -->
