--- a/calculators/home-affordability.html
+++ b/calculators/home-affordability.html
@@ -113,9 +113,9 @@
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.homeAffordability.title">Home Affordability Calculator</h1>
+        <h1 class="calc-title">Home Affordability Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -132,21 +132,21 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
-                    <span data-i18n="calculators.homeAffordability.financialDetails">Financial Details</span>
+                    <span>Financial Details</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="affordabilityForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="annualIncome" data-i18n="calculators.homeAffordability.annualIncome">Annual Gross Income</label>
+                            <label for="annualIncome">Annual Gross Income</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="annualIncome" value="100000" min="0" step="1000" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="monthlyDebts" data-i18n="calculators.homeAffordability.monthlyDebts">Monthly Debt Payments</label>
+                            <label for="monthlyDebts">Monthly Debt Payments</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="monthlyDebts" value="500" min="0" step="50">
@@ -156,14 +156,14 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="downPaymentAmount" data-i18n="calculators.homeAffordability.downPayment">Down Payment Available</label>
+                            <label for="downPaymentAmount">Down Payment Available</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="downPaymentAmount" value="60000" min="0" step="1000" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="interestRate" data-i18n="calculators.homeAffordability.interestRate">Interest Rate</label>
+                            <label for="interestRate">Interest Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="interestRate" value="6.5" min="0" max="15" step="0.125" required>
@@ -173,15 +173,15 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="loanTerm" data-i18n="calculators.homeAffordability.loanTerm">Loan Term</label>
+                            <label for="loanTerm">Loan Term</label>
                             <select id="loanTerm">
-                                <option value="30" selected data-i18n="calculators.homeAffordability.loanTerm30">30 years</option>
-                                <option value="20" data-i18n="calculators.homeAffordability.loanTerm20">20 years</option>
-                                <option value="15" data-i18n="calculators.homeAffordability.loanTerm15">15 years</option>
+                                <option value="30" selected>30 years</option>
+                                <option value="20">20 years</option>
+                                <option value="15">15 years</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="propertyTax" data-i18n="calculators.homeAffordability.propertyTax">Property Tax Rate (Annual)</label>
+                            <label for="propertyTax">Property Tax Rate (Annual)</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="propertyTax" value="1.2" min="0" max="5" step="0.1">
@@ -190,23 +190,23 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="homeInsurance" data-i18n="calculators.homeAffordability.insurance">Annual Home Insurance</label>
+                        <label for="homeInsurance">Annual Home Insurance</label>
                         <div class="input-group">
                             <span>$</span>
                             <input type="number" id="homeInsurance" value="1500" min="0" step="100">
                         </div>
                     </div>
 
-                    <button type="submit" class="btn" data-i18n="calculators.homeAffordability.calculate">Calculate Affordability</button>
+                    <button type="submit" class="btn">Calculate Affordability</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="mortgage.html" class="calc-quick-link">🏠 <span data-i18n="calculators.mortgage.title">Mortgage</span></a>
-                <a href="refinance.html" class="calc-quick-link">🔄 <span data-i18n="calculators.refinance.title">Refinance</span></a>
-                <a href="rent-vs-buy.html" class="calc-quick-link">🏘️ <span data-i18n="calculators.rentVsBuy.title">Rent vs Buy</span></a>
-                <a href="debt-payoff.html" class="calc-quick-link">💳 <span data-i18n="calculators.debtPayoff.title">Debt Payoff</span></a>
+                <a href="mortgage.html" class="calc-quick-link">🏠 <span>Mortgage</span></a>
+                <a href="refinance.html" class="calc-quick-link">🔄 <span>Refinance</span></a>
+                <a href="rent-vs-buy.html" class="calc-quick-link">🏘️ <span>Rent vs Buy</span></a>
+                <a href="debt-payoff.html" class="calc-quick-link">💳 <span>Debt Payoff</span></a>
             </div>
         </div>
 
@@ -214,32 +214,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="maxHomePrice">$0</div>
-                <div class="label" data-i18n="calculators.homeAffordability.maxHomePrice">Maximum Home Price</div>
+                <div class="label">Maximum Home Price</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="monthlyPayment">$0</div>
-                    <div class="label" data-i18n="calculators.homeAffordability.monthlyPayment">Monthly Payment</div>
+                    <div class="label">Monthly Payment</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="loanAmount">$0</div>
-                    <div class="label" data-i18n="calculators.homeAffordability.maxLoanAmount">Loan Amount</div>
+                    <div class="label">Loan Amount</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="dtiRatio">0%</div>
-                    <div class="label" data-i18n="calculators.homeAffordability.dtiRatio">DTI Ratio</div>
+                    <div class="label">DTI Ratio</div>
                 </div>
                 <div class="calc-result-item success">
                     <div class="value" id="downPaymentPercent">0%</div>
-                    <div class="label" data-i18n="calculators.homeAffordability.downPaymentPercent">Down Payment %</div>
+                    <div class="label">Down Payment %</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="breakdown" data-i18n="calculators.homeAffordability.breakdown">Breakdown</button>
-                <button class="calc-output-tab" data-tab="details" data-i18n="calculators.homeAffordability.details">Details</button>
+                <button class="calc-output-tab active" data-tab="breakdown">Breakdown</button>
+                <button class="calc-output-tab" data-tab="details">Details</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -247,19 +247,19 @@
                 <div class="calc-tab-content active" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.principalInterest">Principal & Interest</span>
+                            <span class="breakdown-label">Principal & Interest</span>
                             <span class="breakdown-value" id="principalInterest">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.monthlyTax">Property Tax (Monthly)</span>
+                            <span class="breakdown-label">Property Tax (Monthly)</span>
                             <span class="breakdown-value" id="monthlyTax">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.monthlyInsurance">Insurance (Monthly)</span>
+                            <span class="breakdown-label">Insurance (Monthly)</span>
                             <span class="breakdown-value" id="monthlyInsurance">$0</span>
                         </div>
                         <div class="breakdown-item total">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.totalMonthly">Total Monthly</span>
+                            <span class="breakdown-label">Total Monthly</span>
                             <span class="breakdown-value" id="totalMonthly">$0</span>
                         </div>
                     </div>
@@ -269,19 +269,19 @@
                 <div class="calc-tab-content" id="detailsContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.monthlyIncome">Monthly Income</span>
+                            <span class="breakdown-label">Monthly Income</span>
                             <span class="breakdown-value" id="monthlyIncome">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.maxHousingPayment">Max Housing Payment (28%)</span>
+                            <span class="breakdown-label">Max Housing Payment (28%)</span>
                             <span class="breakdown-value" id="maxHousingPayment">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.maxTotalDebt">Max Total Debt (36%)</span>
+                            <span class="breakdown-label">Max Total Debt (36%)</span>
                             <span class="breakdown-value" id="maxTotalDebt">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.homeAffordability.availableForHousing">Available for Housing</span>
+                            <span class="breakdown-label">Available for Housing</span>
                             <span class="breakdown-value" id="availableForHousing">$0</span>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.homeAffordability.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -401,11 +401,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="calculators.homeAffordability.disclaimer">Disclaimer: This calculator provides estimates only. Actual affordability depends on many factors including credit score, debt obligations, and lender requirements.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator provides estimates only. Actual affordability depends on many factors including credit score, debt obligations, and lender requirements.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -413,7 +413,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Home Affordability Calculator -->
