--- a/calculators/inflation.html
+++ b/calculators/inflation.html
@@ -37,14 +37,14 @@
 </head>
 <body>
     <!-- Skip to content for accessibility -->
-    <a href="#main-content" class="skip-link" data-i18n="accessibility.skipToContent">Skip to main content</a>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.inflation.title">Inflation Calculator</h1>
+        <h1 class="calc-title">Inflation Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -61,21 +61,21 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
-                    <span data-i18n="calculators.inflation.inputTitle">Inflation Parameters</span>
+                    <span>Inflation Parameters</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="inflationForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentAmount" data-i18n="calculators.inflation.currentAmount">Current Amount</label>
+                            <label for="currentAmount">Current Amount</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentAmount" value="100" min="0" step="1" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inflationRate" data-i18n="calculators.inflation.inflationRate">Annual Inflation Rate</label>
+                            <label for="inflationRate">Annual Inflation Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="inflationRate" value="3" min="0" max="50" step="0.1" required>
@@ -83,19 +83,19 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="years" data-i18n="calculators.inflation.years">Number of Years</label>
+                        <label for="years">Number of Years</label>
                         <input type="number" id="years" value="10" min="1" max="100" required>
                     </div>
-                    <button type="submit" class="btn" data-i18n="calculators.inflation.calculate">Calculate</button>
+                    <button type="submit" class="btn">Calculate</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="retirement.html" class="calc-quick-link">🏖️ <span data-i18n="calculators.retirement.title">Retirement</span></a>
-                <a href="compound-interest.html" class="calc-quick-link">📈 <span data-i18n="calculators.compoundInterest.title">Compound Interest</span></a>
-                <a href="investment-return.html" class="calc-quick-link">💹 <span data-i18n="calculators.investmentReturn.title">Investment Return</span></a>
-                <a href="social-security.html" class="calc-quick-link">🏛️ <span data-i18n="calculators.socialSecurity.title">Social Security</span></a>
+                <a href="retirement.html" class="calc-quick-link">🏖️ <span>Retirement</span></a>
+                <a href="compound-interest.html" class="calc-quick-link">📈 <span>Compound Interest</span></a>
+                <a href="investment-return.html" class="calc-quick-link">💹 <span>Investment Return</span></a>
+                <a href="social-security.html" class="calc-quick-link">🏛️ <span>Social Security</span></a>
             </div>
         </div>
 
@@ -103,32 +103,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="futureValue">$134</div>
-                <div class="label" data-i18n="calculators.inflation.futureCostLabel">Future Cost of Same Goods</div>
+                <div class="label">Future Cost of Same Goods</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="purchasingPowerLost">$26</div>
-                    <div class="label" data-i18n="calculators.inflation.purchasingPowerLost">Purchasing Power Lost</div>
+                    <div class="label">Purchasing Power Lost</div>
                 </div>
                 <div class="calc-result-item highlight">
                     <div class="value" id="percentDecrease">26%</div>
-                    <div class="label" data-i18n="calculators.inflation.valueDecrease">Value Decrease</div>
+                    <div class="label">Value Decrease</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="futureBuyingPower">$74</div>
-                    <div class="label" data-i18n="calculators.inflation.futureBuyingPower">Future Buying Power</div>
+                    <div class="label">Future Buying Power</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="priceIncrease">$34</div>
-                    <div class="label" data-i18n="calculators.inflation.priceIncrease">Price Increase</div>
+                    <div class="label">Price Increase</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="breakdown" data-i18n="calculators.inflation.breakdown">Breakdown</button>
-                <button class="calc-output-tab" data-tab="schedule" data-i18n="calculators.inflation.yearByYear">Year by Year</button>
+                <button class="calc-output-tab active" data-tab="breakdown">Breakdown</button>
+                <button class="calc-output-tab" data-tab="schedule">Year by Year</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -136,23 +136,23 @@
                 <div class="calc-tab-content active" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.inflation.currentAmount">Current Amount</span>
+                            <span class="breakdown-label">Current Amount</span>
                             <span class="breakdown-value" id="currentDisplay">$100</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.inflation.inflationRate">Inflation Rate</span>
+                            <span class="breakdown-label">Inflation Rate</span>
                             <span class="breakdown-value" id="rateDisplay">3%</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.inflation.years">Years</span>
+                            <span class="breakdown-label">Years</span>
                             <span class="breakdown-value" id="yearsDisplay">10</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.inflation.cumulativeInflation">Cumulative Inflation</span>
+                            <span class="breakdown-label">Cumulative Inflation</span>
                             <span class="breakdown-value" id="cumulativeInflation">34%</span>
                         </div>
                         <div class="breakdown-item total">
-                            <span class="breakdown-label" data-i18n="calculators.inflation.futureCostLabel">Future Cost</span>
+                            <span class="breakdown-label">Future Cost</span>
                             <span class="breakdown-value" id="futureCostBreakdown">$134</span>
                         </div>
                     </div>
@@ -163,9 +163,9 @@
                     <table class="calc-table">
                         <thead>
                             <tr>
-                                <th data-i18n="calculators.inflation.year">Year</th>
-                                <th data-i18n="calculators.inflation.futureCost">Future Cost</th>
-                                <th data-i18n="calculators.inflation.buyingPowerOf100">Buying Power of $100</th>
+                                <th>Year</th>
+                                <th>Future Cost</th>
+                                <th>Buying Power of $100</th>
                             </tr>
                         </thead>
                         <tbody id="inflationTable">
@@ -179,7 +179,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.inflation.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -298,11 +298,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="calculators.inflation.disclaimer">Disclaimer: This calculator uses a constant inflation rate. Actual inflation varies year to year.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator uses a constant inflation rate. Actual inflation varies year to year.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -310,7 +310,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Inflation Calculator -->
