--- a/calculators/refinance.html
+++ b/calculators/refinance.html
@@ -113,9 +113,9 @@
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.refinance.title">Refinance Calculator</h1>
+        <h1 class="calc-title">Refinance Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -132,21 +132,21 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12a9 9 0 0 1-9 9m9-9a9 9 0 0 0-9-9m9 9H3m9 9a9 9 0 0 1-9-9m9 9c1.66 0 3-4.03 3-9s-1.34-9-3-9m0 18c-1.66 0-3-4.03-3-9s1.34-9 3-9m-9 9a9 9 0 0 1 9-9"></path></svg>
-                    <span data-i18n="calculators.refinance.currentLoan">Current Loan</span>
+                    <span>Current Loan</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="refinanceForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentBalance" data-i18n="calculators.refinance.currentBalance">Current Balance</label>
+                            <label for="currentBalance">Current Balance</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentBalance" value="250000" min="0" step="1000" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="currentRate" data-i18n="calculators.refinance.currentRate">Current Interest Rate</label>
+                            <label for="currentRate">Current Interest Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="currentRate" value="7.5" min="0" max="20" step="0.125" required>
@@ -155,11 +155,11 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentTermRemaining" data-i18n="calculators.refinance.monthsRemaining">Months Remaining</label>
+                            <label for="currentTermRemaining">Months Remaining</label>
                             <input type="number" id="currentTermRemaining" value="300" min="1" max="360" required>
                         </div>
                         <div class="form-group">
-                            <label for="currentPayment" data-i18n="calculators.refinance.currentPayment">Current Monthly Payment</label>
+                            <label for="currentPayment">Current Monthly Payment</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentPayment" value="1800" min="0" step="10" required>
@@ -168,45 +168,45 @@
                     </div>
 
                     <div class="calc-panel-divider">
-                        <span data-i18n="calculators.refinance.newLoan">New Loan</span>
+                        <span>New Loan</span>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="newRate" data-i18n="calculators.refinance.newRate">New Interest Rate</label>
+                            <label for="newRate">New Interest Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="newRate" value="6.0" min="0" max="20" step="0.125" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="newTerm" data-i18n="calculators.refinance.newTerm">New Loan Term</label>
+                            <label for="newTerm">New Loan Term</label>
                             <select id="newTerm">
-                                <option value="360" data-i18n="calculators.refinance.years30">30 years</option>
-                                <option value="240" data-i18n="calculators.refinance.years20">20 years</option>
-                                <option value="180" selected data-i18n="calculators.refinance.years15">15 years</option>
-                                <option value="120" data-i18n="calculators.refinance.years10">10 years</option>
+                                <option value="360">30 years</option>
+                                <option value="240">20 years</option>
+                                <option value="180" selected>15 years</option>
+                                <option value="120">10 years</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="closingCosts" data-i18n="calculators.refinance.closingCosts">Closing Costs</label>
+                        <label for="closingCosts">Closing Costs</label>
                         <div class="input-group">
                             <span>$</span>
                             <input type="number" id="closingCosts" value="5000" min="0" step="100">
                         </div>
                     </div>
 
-                    <button type="submit" class="btn" data-i18n="calculators.refinance.compareLoans">Compare Loans</button>
+                    <button type="submit" class="btn">Compare Loans</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="mortgage.html" class="calc-quick-link">🏠 <span data-i18n="calculators.mortgage.title">Mortgage</span></a>
-                <a href="home-affordability.html" class="calc-quick-link">💵 <span data-i18n="calculators.homeAffordability.title">Affordability</span></a>
-                <a href="rent-vs-buy.html" class="calc-quick-link">🏘️ <span data-i18n="calculators.rentVsBuy.title">Rent vs Buy</span></a>
-                <a href="loan-payoff.html" class="calc-quick-link">💳 <span data-i18n="calculators.loanPayoff.title">Loan Payoff</span></a>
+                <a href="mortgage.html" class="calc-quick-link">🏠 <span>Mortgage</span></a>
+                <a href="home-affordability.html" class="calc-quick-link">💵 <span>Affordability</span></a>
+                <a href="rent-vs-buy.html" class="calc-quick-link">🏘️ <span>Rent vs Buy</span></a>
+                <a href="loan-payoff.html" class="calc-quick-link">💳 <span>Loan Payoff</span></a>
             </div>
         </div>
 
@@ -214,56 +214,56 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlySavings">$0</div>
-                <div class="label" data-i18n="calculators.refinance.monthlySavings">Monthly Savings</div>
+                <div class="label">Monthly Savings</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="newPayment">$0</div>
-                    <div class="label" data-i18n="calculators.refinance.newPayment">New Payment</div>
+                    <div class="label">New Payment</div>
                 </div>
                 <div class="calc-result-item success">
                     <div class="value" id="lifetimeSavings">$0</div>
-                    <div class="label" data-i18n="calculators.refinance.lifetimeSavings">Lifetime Savings</div>
+                    <div class="label">Lifetime Savings</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="breakEven">0 months</div>
-                    <div class="label" data-i18n="calculators.refinance.breakEven">Break-Even</div>
+                    <div class="label">Break-Even</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="recommendation">-</div>
-                    <div class="label" data-i18n="calculators.refinance.recommendation">Recommendation</div>
+                    <div class="label">Recommendation</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="comparison" data-i18n="calculators.refinance.comparison">Comparison</button>
-                <button class="calc-output-tab" data-tab="details" data-i18n="calculators.refinance.details">Details</button>
+                <button class="calc-output-tab active" data-tab="comparison">Comparison</button>
+                <button class="calc-output-tab" data-tab="details">Details</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
                 <!-- Comparison Tab -->
                 <div class="calc-tab-content active" id="comparisonContent">
                     <div class="calc-breakdown">
-                        <h4 data-i18n="calculators.refinance.currentLoan">Current Loan</h4>
+                        <h4>Current Loan</h4>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.totalRemainingPayments">Total Remaining Payments</span>
+                            <span class="breakdown-label">Total Remaining Payments</span>
                             <span class="breakdown-value" id="currentTotal">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.totalInterest">Total Interest</span>
+                            <span class="breakdown-label">Total Interest</span>
                             <span class="breakdown-value" id="currentInterest">$0</span>
                         </div>
                     </div>
                     <div class="calc-breakdown" style="margin-top: 1rem;">
-                        <h4 data-i18n="calculators.refinance.newLoan">New Loan</h4>
+                        <h4>New Loan</h4>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.totalPayments">Total Payments</span>
+                            <span class="breakdown-label">Total Payments</span>
                             <span class="breakdown-value" id="newTotal">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.totalInterest">Total Interest</span>
+                            <span class="breakdown-label">Total Interest</span>
                             <span class="breakdown-value" id="newInterest">$0</span>
                         </div>
                     </div>
@@ -273,19 +273,19 @@
                 <div class="calc-tab-content" id="detailsContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.rateReduction">Rate Reduction</span>
+                            <span class="breakdown-label">Rate Reduction</span>
                             <span class="breakdown-value" id="rateReduction">0%</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.closingCostsLabel">Closing Costs</span>
+                            <span class="breakdown-label">Closing Costs</span>
                             <span class="breakdown-value" id="closingCostsDisplay">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.newLoanAmount">New Loan Amount</span>
+                            <span class="breakdown-label">New Loan Amount</span>
                             <span class="breakdown-value" id="newLoanAmount">$0</span>
                         </div>
                         <div class="breakdown-item total">
-                            <span class="breakdown-label" data-i18n="calculators.refinance.netSavings">Net Savings</span>
+                            <span class="breakdown-label">Net Savings</span>
                             <span class="breakdown-value" id="netSavings">$0</span>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.refinance.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -400,11 +400,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="calculators.refinance.disclaimer">Disclaimer: This calculator provides estimates only. Consult a mortgage professional for accurate quotes.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator provides estimates only. Consult a mortgage professional for accurate quotes.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -412,7 +412,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Refinance Calculator -->
