--- a/calculators/retirement.html
+++ b/calculators/retirement.html
@@ -48,14 +48,14 @@
 </head>
 <body>
     <!-- Skip to content for accessibility -->
-    <a href="#main-content" class="skip-link" data-i18n="accessibility.skipToContent">Skip to main content</a>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.retirement.title">Retirement Calculator</h1>
+        <h1 class="calc-title">Retirement Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -72,31 +72,31 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-                    <span data-i18n="calculators.retirement.planningDetails">Planning Details</span>
+                    <span>Planning Details</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="retirementForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentAge" data-i18n="calculators.retirement.currentAge">Current Age</label>
+                            <label for="currentAge">Current Age</label>
                             <input type="number" id="currentAge" value="30" min="18" max="80" required>
                         </div>
                         <div class="form-group">
-                            <label for="retirementAge" data-i18n="calculators.retirement.retirementAge">Retirement Age</label>
+                            <label for="retirementAge">Retirement Age</label>
                             <input type="number" id="retirementAge" value="65" min="50" max="80" required>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="currentSavings" data-i18n="calculators.retirement.currentRetirementSavings">Current Retirement Savings</label>
+                            <label for="currentSavings">Current Retirement Savings</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentSavings" value="50000" min="0" step="1000" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="monthlyContribution" data-i18n="calculators.retirement.monthlyContribution">Monthly Contribution</label>
+                            <label for="monthlyContribution">Monthly Contribution</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="monthlyContribution" value="1000" min="0" step="50" required>
@@ -105,30 +105,30 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="expectedReturn" data-i18n="calculators.retirement.expectedReturnPercent">Expected Annual Return (%)</label>
+                            <label for="expectedReturn">Expected Annual Return (%)</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="expectedReturn" value="7" min="0" max="20" step="0.5" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="desiredIncome" data-i18n="calculators.retirement.desiredAnnualIncome">Desired Annual Income</label>
+                            <label for="desiredIncome">Desired Annual Income</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="desiredIncome" value="60000" min="0" step="1000" required>
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn" data-i18n="common.calculate">Calculate</button>
+                    <button type="submit" class="btn">Calculate</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="401k.html" class="calc-quick-link">💼 <span data-i18n="calculators.401k.title">401(k)</span></a>
-                <a href="roth-vs-traditional.html" class="calc-quick-link">⚖️ <span data-i18n="calculators.rothVsTraditional.title">Roth vs Traditional</span></a>
-                <a href="social-security.html" class="calc-quick-link">🏛️ <span data-i18n="calculators.socialSecurity.title">Social Security</span></a>
-                <a href="compound-interest.html" class="calc-quick-link">📈 <span data-i18n="calculators.compoundInterest.title">Compound Interest</span></a>
+                <a href="401k.html" class="calc-quick-link">💼 <span>401(k)</span></a>
+                <a href="roth-vs-traditional.html" class="calc-quick-link">⚖️ <span>Roth vs Traditional</span></a>
+                <a href="social-security.html" class="calc-quick-link">🏛️ <span>Social Security</span></a>
+                <a href="compound-interest.html" class="calc-quick-link">📈 <span>Compound Interest</span></a>
             </div>
         </div>
 
@@ -136,32 +136,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="projectedSavings">$0</div>
-                <div class="label" data-i18n="calculators.retirement.projectedSavings">Projected Savings at Retirement</div>
+                <div class="label">Projected Savings at Retirement</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="yearsToRetirement">0</div>
-                    <div class="label" data-i18n="calculators.retirement.yearsUntilRetirement">Years Until Retirement</div>
+                    <div class="label">Years Until Retirement</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="totalContributions">$0</div>
-                    <div class="label" data-i18n="calculators.retirement.totalContributions">Total Contributions</div>
+                    <div class="label">Total Contributions</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="investmentGrowth">$0</div>
-                    <div class="label" data-i18n="calculators.retirement.investmentGrowth">Investment Growth</div>
+                    <div class="label">Investment Growth</div>
                 </div>
                 <div class="calc-result-item" id="statusCard">
                     <div class="value" id="status">-</div>
-                    <div class="label" data-i18n="calculators.retirement.status">Status</div>
+                    <div class="label">Status</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="details" data-i18n="calculators.retirement.detailsTab">Details</button>
-                <button class="calc-output-tab" data-tab="breakdown" data-i18n="calculators.retirement.breakdownTab">Breakdown</button>
+                <button class="calc-output-tab active" data-tab="details">Details</button>
+                <button class="calc-output-tab" data-tab="breakdown">Breakdown</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -169,11 +169,11 @@
                 <div class="calc-tab-content active" id="detailsContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.retirement.savingsNeeded">Savings Needed (4% Rule)</span>
+                            <span class="breakdown-label">Savings Needed (4% Rule)</span>
                             <span class="breakdown-value" id="savingsNeeded">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.retirement.annualIncomeFromSavings">Annual Income from Savings</span>
+                            <span class="breakdown-label">Annual Income from Savings</span>
                             <span class="breakdown-value" id="annualIncome">$0</span>
                         </div>
                     </div>
@@ -183,11 +183,11 @@
                 <div class="calc-tab-content" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.retirement.fourPercentRule">4% Rule Explanation</span>
+                            <span class="breakdown-label">4% Rule Explanation</span>
                             <span class="breakdown-value">Desired Income × 25</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.retirement.monthlyWithdrawal">Monthly Withdrawal (4%)</span>
+                            <span class="breakdown-label">Monthly Withdrawal (4%)</span>
                             <span class="breakdown-value" id="monthlyWithdrawal">$0</span>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.retirement.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -297,11 +297,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">&copy; 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="footer.disclaimer">Disclaimer: This calculator provides estimates only. Consult a financial advisor for personalized retirement planning.</p>
+            <p>&copy; 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator provides estimates only. Consult a financial advisor for personalized retirement planning.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -309,7 +309,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Retirement Calculator -->
