--- a/calculators/salary.html
+++ b/calculators/salary.html
@@ -37,14 +37,14 @@
 </head>
 <body>
     <!-- Skip to content for accessibility -->
-    <a href="#main-content" class="skip-link" data-i18n="accessibility.skipToContent">Skip to main content</a>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.salary.title">Salary Calculator</h1>
+        <h1 class="calc-title">Salary Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -61,50 +61,50 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
-                    <span data-i18n="calculators.salary.payDetails">Pay Details</span>
+                    <span>Pay Details</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="salaryForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="salaryAmount" data-i18n="calculators.salary.amount">Salary Amount</label>
+                            <label for="salaryAmount">Salary Amount</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="salaryAmount" value="50000" min="0" step="100" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="salaryPeriod" data-i18n="calculators.salary.period">Pay Period</label>
+                            <label for="salaryPeriod">Pay Period</label>
                             <select id="salaryPeriod">
-                                <option value="annual" selected data-i18n="calculators.salary.annual">Annual</option>
-                                <option value="monthly" data-i18n="calculators.salary.monthly">Monthly</option>
-                                <option value="biweekly" data-i18n="calculators.salary.biweekly">Bi-Weekly</option>
-                                <option value="weekly" data-i18n="calculators.salary.weekly">Weekly</option>
-                                <option value="hourly" data-i18n="calculators.salary.hourly">Hourly</option>
+                                <option value="annual" selected>Annual</option>
+                                <option value="monthly">Monthly</option>
+                                <option value="biweekly">Bi-Weekly</option>
+                                <option value="weekly">Weekly</option>
+                                <option value="hourly">Hourly</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="hoursPerWeek" data-i18n="calculators.salary.hoursPerWeek">Hours Per Week</label>
+                            <label for="hoursPerWeek">Hours Per Week</label>
                             <input type="number" id="hoursPerWeek" value="40" min="1" max="168" required>
                         </div>
                         <div class="form-group">
-                            <label for="weeksPerYear" data-i18n="calculators.salary.weeksPerYear">Weeks Per Year</label>
+                            <label for="weeksPerYear">Weeks Per Year</label>
                             <input type="number" id="weeksPerYear" value="52" min="1" max="52" required>
                         </div>
                     </div>
-                    <button type="submit" class="btn" data-i18n="common.calculate">Calculate</button>
+                    <button type="submit" class="btn">Calculate</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="take-home-pay.html" class="calc-quick-link">💰 <span data-i18n="calculators.takeHomePay.title">Take-Home Pay</span></a>
-                <a href="self-employment-tax.html" class="calc-quick-link">📋 <span data-i18n="calculators.selfEmploymentTax.title">Self-Employment Tax</span></a>
-                <a href="401k.html" class="calc-quick-link">🏦 <span data-i18n="calculators.401k.title">401(k)</span></a>
-                <a href="retirement.html" class="calc-quick-link">🎯 <span data-i18n="calculators.retirement.title">Retirement</span></a>
+                <a href="take-home-pay.html" class="calc-quick-link">💰 <span>Take-Home Pay</span></a>
+                <a href="self-employment-tax.html" class="calc-quick-link">📋 <span>Self-Employment Tax</span></a>
+                <a href="401k.html" class="calc-quick-link">🏦 <span>401(k)</span></a>
+                <a href="retirement.html" class="calc-quick-link">🎯 <span>Retirement</span></a>
             </div>
         </div>
 
@@ -112,32 +112,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="annualPay">$50,000</div>
-                <div class="label" data-i18n="calculators.salary.annual">Annual Salary</div>
+                <div class="label">Annual Salary</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="hourlyPay">$24.04</div>
-                    <div class="label" data-i18n="calculators.salary.hourly">Hourly</div>
+                    <div class="label">Hourly</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="dailyPay">$192.31</div>
-                    <div class="label" data-i18n="calculators.salary.daily">Daily</div>
+                    <div class="label">Daily</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="weeklyPay">$961.54</div>
-                    <div class="label" data-i18n="calculators.salary.weekly">Weekly</div>
+                    <div class="label">Weekly</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="biweeklyPay">$1,923.08</div>
-                    <div class="label" data-i18n="calculators.salary.biweekly">Bi-Weekly</div>
+                    <div class="label">Bi-Weekly</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="breakdown" data-i18n="calculators.salary.breakdown">Breakdown</button>
-                <button class="calc-output-tab" data-tab="comparison" data-i18n="calculators.salary.comparison">Comparison</button>
+                <button class="calc-output-tab active" data-tab="breakdown">Breakdown</button>
+                <button class="calc-output-tab" data-tab="comparison">Comparison</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -145,19 +145,19 @@
                 <div class="calc-tab-content active" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.salary.semimonthly">Semi-Monthly</span>
+                            <span class="breakdown-label">Semi-Monthly</span>
                             <span class="breakdown-value" id="semimonthlyPay">$2,083.33</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.salary.monthly">Monthly</span>
+                            <span class="breakdown-label">Monthly</span>
                             <span class="breakdown-value" id="monthlyPay">$4,166.67</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.salary.quarterly">Quarterly</span>
+                            <span class="breakdown-label">Quarterly</span>
                             <span class="breakdown-value" id="quarterlyPay">$12,500.00</span>
                         </div>
                         <div class="breakdown-item total">
-                            <span class="breakdown-label" data-i18n="calculators.salary.annual">Annual</span>
+                            <span class="breakdown-label">Annual</span>
                             <span class="breakdown-value" id="annualPayBreakdown">$50,000.00</span>
                         </div>
                     </div>
@@ -168,39 +168,39 @@
                     <table class="calc-table">
                         <thead>
                             <tr>
-                                <th data-i18n="calculators.salary.period">Period</th>
-                                <th data-i18n="calculators.salary.amount">Amount</th>
-                                <th data-i18n="calculators.salary.paychecks">Paychecks/Year</th>
+                                <th>Period</th>
+                                <th>Amount</th>
+                                <th>Paychecks/Year</th>
                             </tr>
                         </thead>
                         <tbody id="comparisonBody">
                             <tr>
-                                <td data-i18n="calculators.salary.hourly">Hourly</td>
+                                <td>Hourly</td>
                                 <td id="compHourly">$24.04</td>
                                 <td>2,080</td>
                             </tr>
                             <tr>
-                                <td data-i18n="calculators.salary.daily">Daily</td>
+                                <td>Daily</td>
                                 <td id="compDaily">$192.31</td>
                                 <td>260</td>
                             </tr>
                             <tr>
-                                <td data-i18n="calculators.salary.weekly">Weekly</td>
+                                <td>Weekly</td>
                                 <td id="compWeekly">$961.54</td>
                                 <td>52</td>
                             </tr>
                             <tr>
-                                <td data-i18n="calculators.salary.biweekly">Bi-Weekly</td>
+                                <td>Bi-Weekly</td>
                                 <td id="compBiweekly">$1,923.08</td>
                                 <td>26</td>
                             </tr>
                             <tr>
-                                <td data-i18n="calculators.salary.semimonthly">Semi-Monthly</td>
+                                <td>Semi-Monthly</td>
                                 <td id="compSemimonthly">$2,083.33</td>
                                 <td>24</td>
                             </tr>
                             <tr>
-                                <td data-i18n="calculators.salary.monthly">Monthly</td>
+                                <td>Monthly</td>
                                 <td id="compMonthly">$4,166.67</td>
                                 <td>12</td>
                             </tr>
@@ -214,7 +214,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.salary.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -325,11 +325,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="calculators.salary.disclaimer">Disclaimer: This calculator shows gross pay before taxes and deductions. Actual take-home pay will be lower.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator shows gross pay before taxes and deductions. Actual take-home pay will be lower.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -337,7 +337,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Salary Calculator -->
