--- a/calculators/savings-goal.html
+++ b/calculators/savings-goal.html
@@ -37,14 +37,14 @@
 </head>
 <body>
     <!-- Skip to content for accessibility -->
-    <a href="#main-content" class="skip-link" data-i18n="accessibility.skipToContent">Skip to main content</a>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- Compact Header -->
     <header class="calc-header">
         <a href="../" class="logo">FinCalc</a>
-        <h1 class="calc-title" data-i18n="calculators.savingsGoal.title">Savings Goal Calculator</h1>
+        <h1 class="calc-title">Savings Goal Calculator</h1>
         <nav class="calc-nav">
-            <a href="../#calculators" data-i18n="nav.calculators">All Calculators</a>
+            <a href="../#calculators">All Calculators</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -61,21 +61,21 @@
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-                    <span data-i18n="calculators.savingsGoal.goalDetails">Goal Details</span>
+                    <span>Goal Details</span>
                 </div>
             </div>
             <div class="calc-panel-body">
                 <form id="savingsGoalForm" class="calc-form">
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="goalAmount" data-i18n="calculators.savingsGoal.goalAmount">Savings Goal</label>
+                            <label for="goalAmount">Savings Goal</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="goalAmount" value="10000" min="0" step="100" required>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="currentSavings" data-i18n="calculators.savingsGoal.currentSavings">Current Savings</label>
+                            <label for="currentSavings">Current Savings</label>
                             <div class="input-group">
                                 <span>$</span>
                                 <input type="number" id="currentSavings" value="0" min="0" step="100" required>
@@ -84,27 +84,27 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="timeframe" data-i18n="calculators.savingsGoal.timeframe">Timeframe (Months)</label>
+                            <label for="timeframe">Timeframe (Months)</label>
                             <input type="number" id="timeframe" value="24" min="1" max="600" required>
                         </div>
                         <div class="form-group">
-                            <label for="interestRate" data-i18n="calculators.savingsGoal.interestRate">Expected Interest Rate</label>
+                            <label for="interestRate">Expected Interest Rate</label>
                             <div class="input-group">
                                 <span>%</span>
                                 <input type="number" id="interestRate" value="4" min="0" max="15" step="0.1">
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn" data-i18n="common.calculate">Calculate</button>
+                    <button type="submit" class="btn">Calculate</button>
                 </form>
             </div>
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="emergency-fund.html" class="calc-quick-link">🛡️ <span data-i18n="calculators.emergencyFund.title">Emergency Fund</span></a>
-                <a href="compound-interest.html" class="calc-quick-link">📈 <span data-i18n="calculators.compoundInterest.title">Compound Interest</span></a>
-                <a href="retirement.html" class="calc-quick-link">🏖️ <span data-i18n="calculators.retirement.title">Retirement</span></a>
-                <a href="investment-return.html" class="calc-quick-link">💹 <span data-i18n="calculators.investmentReturn.title">Investment Return</span></a>
+                <a href="emergency-fund.html" class="calc-quick-link">🛡️ <span>Emergency Fund</span></a>
+                <a href="compound-interest.html" class="calc-quick-link">📈 <span>Compound Interest</span></a>
+                <a href="retirement.html" class="calc-quick-link">🏖️ <span>Retirement</span></a>
+                <a href="investment-return.html" class="calc-quick-link">💹 <span>Investment Return</span></a>
             </div>
         </div>
 
@@ -112,32 +112,32 @@
         <div class="calc-output-panel">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlySavings">$417</div>
-                <div class="label" data-i18n="calculators.savingsGoal.monthlyNeeded">Monthly Savings Needed</div>
+                <div class="label">Monthly Savings Needed</div>
             </div>
 
             <div class="calc-result-grid">
                 <div class="calc-result-item">
                     <div class="value" id="weeklySavings">$96</div>
-                    <div class="label" data-i18n="calculators.savingsGoal.weekly">Weekly</div>
+                    <div class="label">Weekly</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="dailySavings">$14</div>
-                    <div class="label" data-i18n="calculators.savingsGoal.daily">Daily</div>
+                    <div class="label">Daily</div>
                 </div>
                 <div class="calc-result-item">
                     <div class="value" id="totalContributions">$10,000</div>
-                    <div class="label" data-i18n="calculators.savingsGoal.totalContributions">Total Contributions</div>
+                    <div class="label">Total Contributions</div>
                 </div>
                 <div class="calc-result-item highlight">
                     <div class="value" id="interestEarned">$0</div>
-                    <div class="label" data-i18n="calculators.savingsGoal.interestEarned">Interest Earned</div>
+                    <div class="label">Interest Earned</div>
                 </div>
             </div>
 
             <!-- Output Tabs -->
             <div class="calc-output-tabs">
-                <button class="calc-output-tab active" data-tab="breakdown" data-i18n="calculators.savingsGoal.breakdown">Breakdown</button>
-                <button class="calc-output-tab" data-tab="schedule" data-i18n="calculators.savingsGoal.schedule">Schedule</button>
+                <button class="calc-output-tab active" data-tab="breakdown">Breakdown</button>
+                <button class="calc-output-tab" data-tab="schedule">Schedule</button>
             </div>
 
             <div class="calc-output-content" id="outputContent">
@@ -145,27 +145,27 @@
                 <div class="calc-tab-content active" id="breakdownContent">
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.savingsGoal.goalAmount">Savings Goal</span>
+                            <span class="breakdown-label">Savings Goal</span>
                             <span class="breakdown-value" id="goalDisplay">$10,000</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.savingsGoal.currentSavings">Current Savings</span>
+                            <span class="breakdown-label">Current Savings</span>
                             <span class="breakdown-value" id="currentDisplay">$0</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.savingsGoal.amountNeeded">Amount Needed</span>
+                            <span class="breakdown-label">Amount Needed</span>
                             <span class="breakdown-value" id="amountNeeded">$10,000</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.savingsGoal.timeframe">Timeframe</span>
+                            <span class="breakdown-label">Timeframe</span>
                             <span class="breakdown-value" id="timeframeDisplay">24 months</span>
                         </div>
                         <div class="breakdown-item">
-                            <span class="breakdown-label" data-i18n="calculators.savingsGoal.interestRate">Interest Rate</span>
+                            <span class="breakdown-label">Interest Rate</span>
                             <span class="breakdown-value" id="rateDisplay">4%</span>
                         </div>
                         <div class="breakdown-item total">
-                            <span class="breakdown-label" data-i18n="calculators.savingsGoal.finalBalance">Final Balance</span>
+                            <span class="breakdown-label">Final Balance</span>
                             <span class="breakdown-value" id="finalBalance">$10,000</span>
                         </div>
                     </div>
@@ -176,10 +176,10 @@
                     <table class="calc-table">
                         <thead>
                             <tr>
-                                <th data-i18n="calculators.savingsGoal.month">Month</th>
-                                <th data-i18n="calculators.savingsGoal.contribution">Contribution</th>
-                                <th data-i18n="calculators.savingsGoal.interest">Interest</th>
-                                <th data-i18n="calculators.savingsGoal.balance">Balance</th>
+                                <th>Month</th>
+                                <th>Contribution</th>
+                                <th>Interest</th>
+                                <th>Balance</th>
                             </tr>
                         </thead>
                         <tbody id="scheduleBody">
@@ -193,7 +193,7 @@
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
-            <h2 data-i18n="calculators.savingsGoal.aboutCalculator">About This Calculator</h2>
+            <h2>About This Calculator</h2>
             <button class="info-sidebar-close" aria-label="Close">×</button>
         </div>
         <div class="info-sidebar-content">
@@ -311,11 +311,11 @@
 
     <footer>
         <div class="container">
-            <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p class="disclaimer" data-i18n="calculators.savingsGoal.disclaimer">Disclaimer: This calculator provides estimates based on constant interest rates. Actual results may vary.</p>
+            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="disclaimer">Disclaimer: This calculator provides estimates based on constant interest rates. Actual results may vary.</p>
             <div class="friend-links">
-                <span data-i18n="footer.friendLinks">Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener" data-i18n="footer.qrmaker">QR Code Generator</a>
+                <span>Friend Links:</span>
+                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
         </div>
     </footer>
@@ -323,7 +323,7 @@
     <!-- Theme Manager -->
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
-    <script src="../js/i18n.js"></script>
+    
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Savings Goal Calculator -->
